# ivp-ws-20-21

./: CMakeLists.txt  README.md  error.h  input.cpp  input.h  parser.cpp  parser.h  scanner.cpp  scanner.h  symbol_names.h  symbol_table.cpp  symbol_table.h  syntax.ebnf
.github/workflows/: build_and_run_tests.yml
tests/: Test.java  add2.java  catch.hpp  divide2.java  endswithcomment.java  if.java  tests.cpp
